0.6.0
 - Initial build for Frodo.
 - Websockets - near instant responce to notifications.
 - New control overlay.
 - Limiting on library items.
 - Info and context buttons.
 - All available controls in large overlay.
 - Popup when entering text is required.
 - Advanced search.
 - Video genres.
 - jQuery 1.8.2.

0.5.4
 - Added Music Videos page.
 - Fixed Season order 10+.
 - Fixed Artist logos on Windows.
 - Fixed Playlist in partymode - playlist is refreshed after every song when in party mode.
 - Fixed Movie logo search.
 - Fixed Movie logo text has background like rest.
 - Fixed Movie logos when viewed from within sets.

0.5.3
 - Added Movie logo view. Get adding at fanart.tv
 - Added CD/DVD art. Expects cdart.png in album dir and disc.png in movie dir.
 - Fixed Playlist video item changing shows GUI.

0.5.2
 - Added Uni UI. Consider the others depreciated.
 - Added Play and enqueue music genre.
 - Added Artist info and enqueue all.
 - Added Start Page. Defaults to Recent TV.
 - Added Better playlist identification and labelling.
 - Added Currently playing stream info in footer (Uni UI only).
 - Fixed Playlists containing streams and not local files.
 - Fixed Youtube trailer link.
 - Fixed Some Windows issues? Please let me know if you have any problems on Windows.
 - Changed Logo walls now support lazyload.
 - Changed Movie Set sorts by label.
 - Changed Action menus (play, enqueue etc.) can be activated on hover or click.
 - Changed Files in file view are listed as filename instead of XBMC label.
 - Update Lazyload to 1.7.2.

0.5.1
 - Added Artists views
 - Added Logo wall for artists and TV show. Does not support lazyload!
 - Added Play movies via Cinema Experience addon.
 - Added Chinese translation by Taxigps.
 - Added Albums inline list view.
 - Added Episodes thumbnail view.
 - Added Movies single poster view.
 - Added Trailer link and play via XBMC.
 - Changed Only warn about reloading when changing UIs.
 - Changed Default timeout to 20 seconds.
 
0.5.0